# gm-activity-recognition

./: .gitignore  environment.yml  setup.cfg  torch2onnx.py
configs/: fine_tune_tsn_config.py  pretrained_slowonly_resnet50_gym-keypoint.py  pretrained_slowonly_resnet50_gym-keypoint_v2.py  pretrained_slowonly_resnet50_ntuxsub-keypoint.py  pretrained_tsn_config.py
notebooks/: generate_reports.ipynb  trial_fine_tune.ipynb
notebooks/archives/: generate_reports.ipynb
notebooks/reports/: data_count.ipynb  visualize_data.ipynb
notebooks/training/: training_3dfcnn.ipynb  training_posec3d.ipynb  training_tsn.ipynb
reports/histories/: tsn_reports.json
results/posec3d/: last_checkpoint
results/posec3d/20240612_205402/vis_data/: config.py
results/posec3d/20240612_210533/vis_data/: scalars.json
results/posec3d/20240917_114202/vis_data/: config.py  scalars.json
results/posec3d/20240917_185113/vis_data/: config.py  scalars.json
src/constants/: criterias.json  globals.py
src/inference/: inference.py  inference_with_visuals.py  label_map_grossmotor.txt  settings.py
src/preprocessing/: crop_4_3.py  frame_extractor.py  generate_heatmaps.py  loader.py  pickle_files_combine.py  pose_extraction.cmd  pose_keypoint.py  scoring_data.py
src/tests/: posec3d_inference.py  pretrained_slowonly_resnet50_gym-keypoint_v2.py  test_inference.py
src/utils/: build_pipeline.py  data_verification.py  inference.py  scraper.py  settings.py  trainer.py
src/utils/scoring/: gallop_scoring.py  helpers.py  run_scoring.py
work_dirs/fine_tune_tsn_config/: fine_tune_tsn_config.py
(+4 files in other folders)
