[metadata]
name = tinytracks
version = 1.0
author = Christian Del Rosario
author_email = ainsley.drosario@gmail.com
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >= 3.8

[options.packages.find]
where=src